Update index.html with instructions

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
 </nav>
     <div class="container text-center">
         <h1 class="mb-4">Kappa Quest Checker</h1>
-
+			<body>Enter the name of a quest and see if its required for Kappa or not!</body>
         <form method="POST" class="mb-4" onsubmit="showLoading()">
             <input type="text" name="quest" class="form-control form-control-lg" placeholder="Enter quest name" required>
             <button type="submit" class="btn btn-primary btn-lg mt-3" id="submit-btn">Check</button>
